force-app/main/default/objects/ModuleResponse__c/ModuleResponse__c.object-meta.xml
<CustomObject>
    <label>Module Response</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Module Response Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module Responses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>