force-app/main/default/objects/ModuleResponse__c/fields/CorrectQuestions__c.field-meta.xml
<CustomField>
    <fullName>CorrectQuestions__c</fullName>
    <label>Correct Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>