force-app/main/default/objects/ModuleResponse__c/fields/CourseStatus__c.field-meta.xml
<CustomField>
    <fullName>CourseStatus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Status</label>
    <referenceTo>CourseStatus__c</referenceTo>
    <relationshipLabel>Modules Responses</relationshipLabel>
    <relationshipName>ModuleResponses</relationshipName>
    <type>Lookup</type>
</CustomField>