force-app/main/default/objects/ModuleResponse__c/fields/GradePercent__c.field-meta.xml
<CustomField>
    <fullName>GradePercent__c</fullName>
    <label>Grade %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>