force-app/main/default/objects/ModuleResponse__c/fields/GradeValue__c.field-meta.xml
<CustomField>
    <fullName>GradeValue__c</fullName>
    <label>Grade Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>