force-app/main/default/objects/ModuleResponse__c/fields/IncorrectQuestions__c.field-meta.xml
<CustomField>
    <fullName>IncorrectQuestions__c</fullName>
    <label>Incorrect Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>