force-app/main/default/objects/ModuleResponse__c/fields/LastChance__c.field-meta.xml
<CustomField>
    <fullName>LastChance__c</fullName>
    <formula>NumberOfAttempt__c = Module__r.AttemptsAllowed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Chance</label>
    <type>Checkbox</type>
</CustomField>