force-app/main/default/objects/ModuleResponse__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Member</label>
    <referenceTo>FieloPLT__Member__c</referenceTo>
    <relationshipLabel>Modules Responses</relationshipLabel>
    <relationshipName>ModuleResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>