force-app/main/default/objects/ModuleResponse__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Module</label>
    <referenceTo>Module__c</referenceTo>
    <relationshipLabel>Module Responses</relationshipLabel>
    <relationshipName>ModuleResponses</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>