force-app/main/default/objects/ModuleResponse__c/fields/NumberofApprove__c.field-meta.xml
<CustomField>
    <fullName>NumberofApprove__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Pass Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>