force-app/main/default/objects/ModuleResponse__c/fields/NumberOfAttempt__c.field-meta.xml
<CustomField>
    <fullName>NumberOfAttempt__c</fullName>
    <label>Attempt Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>