force-app/main/default/objects/ModuleResponse__c/fields/SubmitDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitDate__c</fullName>
    <label>Submit Date</label>
    <type>DateTime</type>
</CustomField>