force-app/main/default/objects/ModuleResponse__c/fields/TotalQuestions__c.field-meta.xml
<CustomField>
    <fullName>TotalQuestions__c</fullName>
    <label>Total Questions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>