force-app/main/default/objects/ModuleResponse__c/validationRules/CourseStatusCannotBeModified.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseStatusCannotBeModified</fullName>
    <active>true</active>
    <description>Lookup to Course Status can&#39;t be modified.</description>
    <errorConditionFormula>ISCHANGED( CourseStatus__c )</errorConditionFormula>
    <errorDisplayField>CourseStatus__c</errorDisplayField>
    <errorMessage>Course Status can&#39;t be modified.</errorMessage>
</ValidationRule>