force-app/main/default/objects/ModuleResponse__c/validationRules/CourseStatusRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>CourseStatusRequired</fullName>
    <active>false</active>
    <description>The lookup to Course Status must be required.</description>
    <errorConditionFormula>ISBLANK( CourseStatus__c )</errorConditionFormula>
    <errorDisplayField>CourseStatus__c</errorDisplayField>
    <errorMessage>Course Status is required.</errorMessage>
</ValidationRule>