force-app/main/default/objects/ModuleResponse__c/validationRules/MemberCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>MemberCannotChange</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Member__c )</errorConditionFormula>
    <errorMessage>The member cannot be changed</errorMessage>
</ValidationRule>