force-app/main/default/objects/ModuleResponse__c/validationRules/ModuleCannotChange.validationRule-meta.xml
<ValidationRule>
    <fullName>ModuleCannotChange</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Module__c )</errorConditionFormula>
    <errorMessage>The module cannot be changed.</errorMessage>
</ValidationRule>