force-app/main/default/objects/ModuleResponse__c/validationRules/RelatedCourseActive.validationRule-meta.xml
<ValidationRule>
    <fullName>RelatedCourseActive</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(CourseStatus__r.Course__r.Status__c,&#39;Active&#39;)
&amp;&amp; (ISNEW() ||  
AND( IsSubmitted__c &amp;&amp; !PRIORVALUE(IsSubmitted__c))
)</errorConditionFormula>
    <errorMessage>The related course must be active</errorMessage>
</ValidationRule>