force-app/main/default/objects/ModuleResponse__c/validationRules/ValidateActiveModule.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateActiveModule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Module__r.IsActive__c)</errorConditionFormula>
    <errorMessage>The related module must be active.</errorMessage>
</ValidationRule>