force-app/main/default/objects/ModuleResponse__c/validationRules/ValidateAttemptNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateAttemptNumber</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(NumberOfAttempt__c)),NumberOfAttempt__c &gt;  Module__r.AttemptsAllowed__c)</errorConditionFormula>
    <errorMessage>You have reached the limit of attempts for this module.</errorMessage>
</ValidationRule>