force-app/main/default/objects/ModuleResponse__c/validationRules/ValidateDate.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateDate</fullName>
    <active>true</active>
    <errorConditionFormula>OR(AND(NOT(ISBLANK(Module__r.Course__r.StartDatetime__c)), DATETIMEVALUE(FieloELR__Date__c) &lt; Module__r.Course__r.StartDatetime__c),AND(NOT(ISBLANK(Module__r.Course__r.EndDatetime__c)), DATETIMEVALUE(FieloELR__Date__c) &gt; Module__r.Course__r.EndDatetime__c))</errorConditionFormula>
    <errorMessage>The course is not available in this period.</errorMessage>
</ValidationRule>